--- a/sharetech/templates/sharetech/top.html
+++ b/sharetech/templates/sharetech/top.html
@@ -134,6 +134,11 @@
         <img src="{% static 'sharetech/img/default_avater.png' %}" alt="">
       </div>
 
+      <div class="user_menu hidden">
+        <a href=""><p class="to_my_page">マイページ</p></a>
+        <a href=""><p class="logout">ログアウト</p></a>
+      </div>
+
       <h1 class="site_logo">
         <a href="...">
           <img src="{% static 'sharetech/img/logo_header.png' %}">
