--- a/sharetech/static/sharetech/css/common.css
+++ b/sharetech/static/sharetech/css/common.css
@@ -41,7 +41,7 @@ a{
     height: 100px;
     min-width: 980px;
     z-index: 99;
-    box-shadow: 0 2px 8px rgb(65, 65, 65);
+    box-shadow: -1px 1px 8px 4px rgb(65, 65, 65, 0.8);
 }
 
 .page_header.sticky{
@@ -136,7 +136,38 @@ a{
     width: 2.5em;
     height: 2.5em;
     border-radius: 50%;
-    border: 1px solid #666;
+    border: 1px solid white;
+}
+
+.page_header .user_menu{
+    position: fixed;
+    top: 4em;
+    right: 1em;
+    width: 240px;
+    height: auto;
+    background-color: rgb(252, 245, 235);
+    text-align: center;
+    border-radius: 4px;
+    box-shadow: 0 2px 8px rgb(65, 65, 65);
+}
+
+.page_header .user_menu.hidden{
+    visibility: hidden;
+}
+
+.page_header .user_menu a{
+    color: #666;
+}
+
+.page_header .user_menu a p{
+    line-height: 2.5em;
+    margin: 0em 1em;
+    padding: .5em 0em;
+    font-weight: bold;
+}
+
+.page_header .user_menu a p.to_my_page{
+    border-bottom: 1px solid #1e90ff;
 }
 
 .main_nav{
@@ -312,14 +343,14 @@ a{
     right: 32px;
     cursor: pointer;
     opacity: 0;
-    background-color: #709ecc;
+    background-color: #1e90ff;
     color: white;
     line-height: 1em;
+    transition: .2s;
 }
 
 .back_to_top:hover{
     box-shadow: 6px 6px 12px #C0C0C0 !important;
-    background-color: #1e90ff;
 }
 
 .back_to_top span{
