--- a/sharetech/templates/sharetech/adviser_register.html
+++ b/sharetech/templates/sharetech/adviser_register.html
@@ -4,56 +4,99 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="discription" content="ログインページ">
-    <title>adviser_register</title>
-    
+    <meta name="discription" content="相談窓口登録ページ">
+    <title>Adviser_Register</title>
     <link rel="stylesheet" href="{% static 'sharetech/css/common.css' %}">
-    <link rel="stylesheet" href="{% static 'sharetech/css/login.css' %}">
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.js"></script>
-    <!-- <script src="{% static 'sharetech/js/login.js' %}"></script> -->
+    <link rel="stylesheet" href="{% static 'sharetech/css/register.css' %}">
 </head>
 
 <body>
-    <header class="login_header">
+    <header class="register_header">
         <h1>
-            <img src="{% static 'sharetech/img/logo_login_page.png' %}">
+            Wellcome to <span>SHARE TECH</span>!
         </h1>
     </header>
 
     <main>
         <!--ログインフォーム-->
         <div class="form_wrapper">
-            {% if form.errors %}
-            <div class="error_msg">
-                <p>もう一度ご登録メールアドレス・パスワードをご確認ください</p>
-            </div>
-            {% else %}
-            <h1>Login</h1>
-            {% endif %}
+            <h3>ご登録申請及び、審査項目となります<br>可能な限り項目を埋めていただくことで、審査が通りやすくなります</h3>
             <form method="POST">
                 {% csrf_token %}
-                    {% for field in form %}
-                    <div class="form_item">
-                        <img src="{% static 'sharetech/img/input_valid_mark.png' %}">
-                        {{field}}
+                {% for field, error in form.errors.items %}
+                <h1>{{error|striptags}}</h1>
+                <h2>{{field}}</h2>
+                {% endfor %}
+                <div class="item_container">
+                    <div class="user_info_wrapper">
+                        <h2>▼必須入力項目</h2>
+                        <!-- 必須入力の項目についてはこっちの要素div内に入れる -->
+                        <div class="form_item user_name_input">
+                            <div class="username">
+                                <label for="name">{{form.consult_window_title.label}}</label>
+                                {{form.consult_window_title}}    
+                            </div>
+                            <div class="username">
+                                <label for="name">{{form.consult_window_overview.label}}</label>
+                                {{form.consult_window_overview}}    
+                            </div>
+                        </div>
+                        <!-- <div class="form_item user_name_input">
+                            <div class="username">
+                                <label for="name">{{form.family_name_en.label}}</label>
+                                {{form.family_name_en}}    
+                            </div>
+                            <div class="username">
+                                <label for="name">{{form.first_name_en.label}}</label>
+                                {{form.first_name_en}}    
+                            </div>
+                        </div>
+                        <div class="form_item role_input">
+                            <label for="role">{{form.role_code.label}}</label>
+                            {{form.role_code}}
+                        </div>
+                        <div class="form_item">
+                            <label for="email">{{form.email.label}}</label>
+                            {{form.email}}
+                        </div>
+                        <div class="form_item">
+                            <label for="password">{{form.password.label}}</label>
+                            {{form.password}}
+                        </div>
+                        <div class="form_item">
+                            <label for="password_confirm">{{form.password_confirm.label}}</label>
+                            {{form.password_confirm}}
+                        </div>
+                        <div class="form_item">
+                            <label for="name">{{form.company.label}}</label>
+                            {{form.company}}                
+                        </div> -->
                     </div>
-                    {% endfor %}
-                <div class="login_button">
-                    <input type="submit" class="button" title="Sign In" value="ログイン">
-                </div>
-            </form>
 
-            <h2>別のアカウントを使う</h2>
-            <div class="oauth_link facebook">
-                <img src="{% static 'sharetech/img/facebook_logo-Blue_58.png' %}" alt="facebook account">
-                <p><a href="#">Sign in with Facebook</a></p>                
-            </div>
-            <div class="form_footer">
-                <p><a href="{% url 'register' %}">Create an account</a></p>
-                <p><a href="#">Forget password?</a></p>
-            </div>
+                    <div class="user_info_wrapper">
+                        <h2>▼オプション入力項目</h2>
+                        <!-- オプション入力の項目についてはこっちの要素div内に入れる -->
+                        <!-- <div class="form_item">
+                            <label for="name">{{form.industry_id.label}}</label>
+                            {{form.industry_id}}                
+                        </div>
+                        <div class="form_item">
+                            <label for="name">{{form.occupation_id.label}}</label>
+                            {{form.occupation_id}}                
+                        </div>
+                        <div class="form_item">
+                            <label for="name">{{form.position_id.label}}</label>
+                            {{form.position_id}}                
+                        </div> -->
+                    </div>    
+                </div>
+
+                <div class="submit">
+                    <input class="return_btn" type="submit" value="戻る">
+                    <input class="submit_btn" type="submit" value="確認">
+                </div>
+                
+            </form>
         </div>
     </main>
 
