--- a/sharetech/templates/sharetech/profile_edit.html
+++ b/sharetech/templates/sharetech/profile_edit.html
@@ -16,7 +16,7 @@
 <script src="{% static 'sharetech/js/mypage.js' %}"></script>
 {% endblock %}
 
-{% block content %}
+{% block main %}
 <div class="profile_edit">
     <form action="POST">
         <input type="text">
