--- a/sharetech/templates/sharetech/base.html
+++ b/sharetech/templates/sharetech/base.html
@@ -73,8 +73,8 @@
       </div>
 
       <div class="user_menu hidden">
-        <a href=""><p class="to_my_page">マイページ</p></a>
-        <a href=""><p class="logout">ログアウト</p></a>
+        <a href="{% url 'profile' %}"><p class="to_my_page">マイページ</p></a>
+        <a href="{% url 'logout' %}"><p class="logout">ログアウト</p></a>
       </div>
 
       <h1 class="site_logo">
