--- a/sharetech/templates/sharetech/password_change.html
+++ b/sharetech/templates/sharetech/password_change.html
@@ -18,55 +18,27 @@
 
 {% block main %}
 <div class="profile_edit">
-    <h2>プロフィール編集</h2>
+    <h2>パスワード変更</h2>
 
     <div class="form_container">
-        <div class="chane_email_link">
-            <a  href="{% url 'email_change' user_id %}">メールアドレス変更　>></a>
-        </div>
         <form method="POST">
             {% csrf_token %}
             {% for field, error in form.errors.items %}
             <h1>{{error|striptags}}</h1>
             <h2>{{field}}</h2>
             {% endfor %}
-            <div class="form_item user_name_input">
-                <div class="username">
-                    <label for="name">{{form.family_name_jp.label}}</label>
-                    {{form.family_name_jp}}
-                </div>
-                <div class="username">
-                    <label for="name">{{form.first_name_jp.label}}</label>
-                    {{form.first_name_jp}}    
-                </div>
-            </div>
-            <div class="form_item user_name_input">
-                <div class="username">
-                    <label for="name">{{form.family_name_en.label}}</label>
-                    {{form.family_name_en}}
-                </div>
-                <div class="username">
-                    <label for="name">{{form.first_name_en.label}}</label>
-                    {{form.first_name_en}}
-                </div>
+            <div class="form_item">
+                <label for="name">{{form.password.label}}</label>
+                {{form.password}}
             </div>
             <div class="form_item">
-                <label for="name">{{form.company.label}}</label>
-                {{form.company}}
+                <label for="name">{{form.new_password.label}}</label>
+                {{form.new_password}}
             </div>
             <div class="form_item">
-                <label for="name">{{form.occupation_id.label}}</label>
-                {{form.occupation_id}}
+                <label for="name">{{form.confirm_password.label}}</label>
+                {{form.confirm_password}}
             </div>
-            <div class="form_item">
-                <label for="name">{{form.industry_id.label}}</label>
-                {{form.industry_id}}
-            </div>
-            <div class="form_item">
-                <label for="name">{{form.position_id.label}}</label>
-                {{form.position_id}}
-            </div>
-
             <div class="btn_area">
                 <input class="return_btn" type="submit" value="戻る">
                 <input class="submit_btn" type="submit" value="確認">
