申込ステータス制御追加

--- a/sharetech/templates/sharetech/base.html
+++ b/sharetech/templates/sharetech/base.html
@@ -114,27 +114,29 @@
   <button type="button" class="back_to_top">
     <span>↑</span>
   </button>
+  {% if applying_flg != '0' %}
   <div class="overlay">
-      <div class="apply_declear" value_id='25' value_date='2021-10-10'>
-        <p>「これはテストタイトルです。」の<br>
-            相談お申込の状況を入力してください</p>
-        <div class="apply_status">
-            <label for="cancel">
-                <input id="cancel" type="radio" name="apply_check" value="0" checked>
-                キャンセル
-            </label>
-            <label for="applyed">
-                <input id="applyed" type="radio" name="apply_check" value="2">
-                申込済
-            </label>
-            <label for="complete">
-                <input id="complete" type="radio" name="apply_check" value="3">
-                相談済
-            </label>    
-        </div>
-        <div class="apply_status_submit">
-            <button>送信</button>
-        </div>
+    <div class="apply_declear" value_id={{consult_window_id}} value_date='2021-10-10'>
+      <p>「これはテストタイトルです。」の<br>
+          相談お申込の状況を入力してください</p>
+      <div class="apply_status">
+          <label for="cancel">
+              <input id="cancel" type="radio" name="apply_check" value="0" checked>
+              キャンセル
+          </label>
+          <label for="applyed">
+              <input id="applyed" type="radio" name="apply_check" value="2">
+              申込済
+          </label>
+          <label for="complete">
+              <input id="complete" type="radio" name="apply_check" value="3">
+              相談済
+          </label>    
       </div>
+      <div class="apply_status_submit">
+          <button>送信</button>
+      </div>
+    </div>
   </div>
+  {% endif %}
 </body>
