ログインユーザー制御実装

--- a/sharetech/templates/sharetech/base.html
+++ b/sharetech/templates/sharetech/base.html
@@ -69,7 +69,7 @@
       </label>
 
       <div class="user_icon">
-        <img src="{% static 'sharetech/img/default_avater.png' %}" alt="">
+        <img src="{% static login_user_icon %}" alt="">
       </div>
 
       <div class="user_menu hidden">
