--- a/sharetech/templates/sharetech/profile_edit.html
+++ b/sharetech/templates/sharetech/profile_edit.html
@@ -55,16 +55,16 @@
                 {{form.company}}
             </div>
             <div class="form_item">
-                <label for="name">{{form.occupation_id.label}}</label>
-                {{form.occupation_id}}
+                <label for="name">{{form.occupation_name.label}}</label>
+                {{form.occupation_name}}
             </div>
             <div class="form_item">
-                <label for="name">{{form.industry_id.label}}</label>
-                {{form.industry_id}}
+                <label for="name">{{form.industry_name.label}}</label>
+                {{form.industry_name}}
             </div>
             <div class="form_item">
-                <label for="name">{{form.position_id.label}}</label>
-                {{form.position_id}}
+                <label for="name">{{form.position_name.label}}</label>
+                {{form.position_name}}
             </div>
 
             <div class="btn_area">
