--- a/sharetech/templates/sharetech/register.html
+++ b/sharetech/templates/sharetech/register.html
@@ -78,15 +78,15 @@
                         <!-- オプション入力の項目についてはこっちの要素div内に入れる -->
                         <div class="form_item">
                             <label for="name">{{form.industry_id.label}}</label>
-                            {{form.industry_id}}                
+                            {{form.industry_name}}                
                         </div>
                         <div class="form_item">
                             <label for="name">{{form.occupation_id.label}}</label>
-                            {{form.occupation_id}}                
+                            {{form.occupation_name}}                
                         </div>
                         <div class="form_item">
                             <label for="name">{{form.position_id.label}}</label>
-                            {{form.position_id}}                
+                            {{form.position_name}}                
                         </div>
                     </div>    
                 </div>
